staging/ci: add server to the environment
This will open up integration with custom API, Artemis, and other
components.

The `STAGING_CI_SUFFIX` required environment variable is added, which
will be appended to the subdomains. For example for API:

```
https://api.staging-$STAGING_CI_SUFFIX.testing-farm.io
````

The state is stored locally, as it is only for the purposes of the CI
run.

The CI components are as much as possible inherited from the normal
staging environment, so the duplication is minimized. That includes pods
definition etc, where they are just symlinked to the staging sources.

The added `generate-ci.yaml` generation playbook is importing
`generate.yaml` and just changes some vars.

Update Makefile with a bit of improved help and document the newly added
variables used to control the various image tags which can be adjusted:

```
STAGING_CI_SUFFIX            ... Suffix added to staging subdomains (required)
STAGING_CI_API_TAG           ... Override API image tag [latest]
STAGING_CI_ARTEMIS_TAG       ... Override Artemis image tag [latest]
STAGING_CI_DISPATCHER_TAG    ... Override Dispatcher image tag [latest]
STAGING_CI_RANCH_PUBLIC_TAG  ... Override Public Ranch Configuration image tag [latest]
STAGING_CI_UI_TAG            ... Override UI image tag [latest]
```

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,8 @@ variables:
   # GitLab CI runs in world writable directory, we need to explicitely set ANSIBLE_CONFIG
   # https://docs.ansible.com/ansible/devel/reference_appendices/config.html#cfg-in-world-writable-dir
   ANSIBLE_CONFIG: ansible.cfg
+  # Used only for staging/ci environment, no-op for others
+  STAGING_CI_SUFFIX: $CI_MERGE_REQUEST_ID-$CI_JOB_ID
   # Set USER used to derive certain dev environment resource names
   USER: gitlab-ci-$CI_JOB_ID
 
