--- a/terragrunt/environments/staging/generate.yaml
+++ b/terragrunt/environments/staging/generate.yaml
@@ -2,6 +2,7 @@
 - name: Generate deployment files
   hosts: localhost
   vars:
+    staging_environment: "staging"
     server_ec2_dir: "{{ ansible_env.PROJECT_ROOT }}/terragrunt/environments/staging/server/ec2"
     server_pods_dir: "{{ ansible_env.PROJECT_ROOT }}/terragrunt/environments/staging/server/pods"
   vars_files:
