--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,13 @@ terragrunt-debug.tfvars.json
 **/.vault_pass
 
 # generated / rendered files
-terragrunt/environments/*/worker*/citool-config/environment.yaml
-terragrunt/environments/*/server/pods/nginx/*.conf
-terragrunt/environments/*/server/pods/server.yaml
-terragrunt/environments/*/server/ec2/server.bu
-terragrunt/environments/*/server/ec2/server.ign
+terragrunt/environments/**/worker*/citool-config/environment.yaml
+terragrunt/environments/**/server/pods/nginx/*.conf
+terragrunt/environments/**/server/pods/server.yaml
+terragrunt/environments/**/server/pods/tmt-web.yaml
+terragrunt/environments/**/server/ec2/server.bu
+terragrunt/environments/**/server/ec2/server.ign
+
 
 # secrets
 .vault_pass
