--- a/tests/worker/public/tmt-empty-plan-x86_64.yaml
+++ b/tests/worker/public/tmt-empty-plan-x86_64.yaml
@@ -21,10 +21,10 @@ variables:
 
 checks:
   literal-strings:
-    - "[testing-farm-request] Connected to Testing Farm Service 'http://api.staging.testing-farm.io', 'http://internal.api.staging.testing-farm.io'"
     - "[git] <RemoteGitRepository(clone_url={{ GIT_CLONE_URL }}, branch=not specified, ref={{ GIT_REF }})>"
     - "[{{ COMPOSE }}:{{ ARCH }}] looking for plans"
     - "[test-scheduler-testing-farm] Exception raised: No plans to execute after applying filters and removing empty plans. Cowardly refusing to continue."
 
   literal-patterns:
+    - "[testing-farm-request] Connected to Testing Farm Service '{{ testing_farm_public_api_url }}', '{{ testing_farm_internal_api_url }}'"
     - "[coldstore] For the pipeline artifacts, see {{ artifacts_url_pattern }}/{{ REQUEST_ID }}"
