--- a/tests/worker/redhat/pipeline/sti-x86_64.yaml
+++ b/tests/worker/redhat/pipeline/sti-x86_64.yaml
@@ -25,7 +25,6 @@ pipeline: |
 
 checks:
   literal-strings:
-    - "[testing-farm-request] Connected to Testing Farm Service 'http://api.staging.testing-farm.io', 'http://internal.api.staging.testing-farm.io'"
     - "[testing-farm-request] Initialized with f8b712c2-1baa-43b9-a5ab-b1668a31981e"
     - "[artemis] Using Artemis API"
     - "[git] <RemoteGitRepository(clone_url=https://gitlab.com/testing-farm/tests, branch=not specified, ref=main)>"
@@ -37,6 +36,7 @@ checks:
     - "[test-schedule-report] Result of testing: PASSED"
 
   literal-patterns:
+    - "[testing-farm-request] Connected to Testing Farm Service '{{ testing_farm_public_api_url }}', '{{ testing_farm_internal_api_url }}'"
     - "[coldstore] For the pipeline artifacts, see {{ artifacts_url_pattern }}/testing-farm/f8b712c2-1baa-43b9-a5ab-b1668a31981e"
     - "[artemis] [{{ artemis_guestname_pattern }}] Guest is being provisioned"
     - "[artemis] [{{ artemis_guestname_pattern }}] Guest is ready"
