staging/ci: add server to the environment
This will open up integration with custom API, Artemis, and other
components.

The `STAGING_CI_SUFFIX` required environment variable is added, which
will be appended to the subdomains. For example for API:

```
https://api.staging-$STAGING_CI_SUFFIX.testing-farm.io
````

The state is stored locally, as it is only for the purposes of the CI
run.

The CI components are as much as possible inherited from the normal
staging environment, so the duplication is minimized. That includes pods
definition etc, where they are just symlinked to the staging sources.

The added `generate-ci.yaml` generation playbook is importing
`generate.yaml` and just changes some vars.

Update Makefile with a bit of improved help and document the newly added
variables used to control the various image tags which can be adjusted:

```
STAGING_CI_SUFFIX            ... Suffix added to staging subdomains (required)
STAGING_CI_API_TAG           ... Override API image tag [latest]
STAGING_CI_ARTEMIS_TAG       ... Override Artemis image tag [latest]
STAGING_CI_DISPATCHER_TAG    ... Override Dispatcher image tag [latest]
STAGING_CI_RANCH_PUBLIC_TAG  ... Override Public Ranch Configuration image tag [latest]
STAGING_CI_UI_TAG            ... Override UI image tag [latest]
```

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -228,6 +228,7 @@ test/staging/pipeline:
     - !reference [.direnv, script]
     - !reference [.script_with_cleanup, script]
   variables:
+    STAGING_CI_SUFFIX: $CI_PIPELINE_ID
     SCRIPT: >-
       make staging/apply/ci &&
       make test/staging/pipeline/ci
@@ -248,6 +249,7 @@ test/staging/pipeline/container:
     - !reference [.script_with_cleanup, script]
   variables:
     PYTEST_PARALLEL_RUNS: 1
+    STAGING_CI_SUFFIX: $CI_PIPELINE_ID
     SCRIPT: >-
       make test/staging/pipeline/container/ci
     AFTER_SCRIPT: >-
@@ -265,6 +267,7 @@ test/staging/compose:
     - !reference [.direnv, script]
     - !reference [.script_with_cleanup, script]
   variables:
+    STAGING_CI_SUFFIX: $CI_PIPELINE_ID
     SCRIPT: >-
       make staging/apply/ci &&
       make test/staging/compose/ci
