--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -228,7 +228,7 @@ test/staging/pipeline:
     - !reference [.direnv, script]
     - !reference [.script_with_cleanup, script]
   variables:
-    STAGING_CI_SUFFIX: $CI_PIPELINE_ID
+    STAGING_CI_SUFFIX: $CI_JOB_ID
     SCRIPT: >-
       make staging/apply/ci &&
       make test/staging/pipeline/ci
@@ -249,7 +249,7 @@ test/staging/pipeline/container:
     - !reference [.script_with_cleanup, script]
   variables:
     PYTEST_PARALLEL_RUNS: 1
-    STAGING_CI_SUFFIX: $CI_PIPELINE_ID
+    STAGING_CI_SUFFIX: $CI_JOB_ID
     SCRIPT: >-
       make test/staging/pipeline/container/ci
     AFTER_SCRIPT: >-
@@ -267,7 +267,7 @@ test/staging/compose:
     - !reference [.direnv, script]
     - !reference [.script_with_cleanup, script]
   variables:
-    STAGING_CI_SUFFIX: $CI_PIPELINE_ID
+    STAGING_CI_SUFFIX: $CI_JOB_ID
     SCRIPT: >-
       make staging/apply/ci &&
       make test/staging/compose/ci
