--- a/terragrunt/environments/production/worker-public/citool-config/source-destination-map.yaml
+++ b/terragrunt/environments/production/worker-public/citool-config/source-destination-map.yaml
@@ -29,6 +29,10 @@ progress:
 
   - source: "work-*/tmt-run.log"
 
+  - source: "work-*/log.txt"
+
+  - source: "work-*/**/output.txt"
+
   - source: "results.xml"
     destination: results.xml
 
