Fix staging, re-enable pre-commit, other fileexists
* Fix staging setup by excluding CI setup
* Enable back pre-commit and fix all issues missed due to hooks not
  running
* Update Gitlab token, it has expired after 2FA enablement

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -67,7 +67,7 @@ export TF_VAR_terraform_api_url=$(echo "$VAULT_VIEW" | yq -r .credentials.terraf
 export TF_VAR_ansible_vault_password_file="$PROJECT_ROOT/.vault_pass"
 export TF_VAR_ansible_vault_credentials="credentials.yaml"
 export TF_VAR_ansible_vault_secrets_root="$(dirname $SECRETS_FILE)"
-export TF_VAR_gitlab_testing_farm_bot=$(echo "$VAULT_VIEW" | yq -er .credentials.gitlab.testing_farm_bot_terragrunt.token)
+export TF_VAR_gitlab_testing_farm_bot=$(echo "$VAULT_VIEW" | yq -er .credentials.gitlab.testing_farm_bot_infra.token)
 
 #
 # Testing Farm
@@ -86,7 +86,7 @@ export TESTING_FARM_DEV_API_URL_PUBLIC="http://api.dev-${USER}.testing-farm.io"
 #
 # gitlab-ci-linter
 #
-export GITLAB_PRIVATE_TOKEN=$(echo "$VAULT_VIEW" | yq -er .credentials.gitlab.testing_farm_bot.token)
+export GITLAB_PRIVATE_TOKEN=$(echo "$VAULT_VIEW" | yq -er .credentials.gitlab.testing_farm_bot_gitlab_ci_linter.token)
 
 #
 # cleanup
