--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -194,8 +194,8 @@ pre-commit:
   script:
     - !reference [.direnv, script]
     # Need to init the modules, or pre-commit terragrunt_validate will fail :(
-    - make dev/init staging/init production/init
-    - PRE_COMMIT_HOME=$CI_PROJECT_DIR/.cache/pre-commit pre-commit run --all-files
+    - make -j4 dev/init staging/init staging/init/ci production/init
+    - pre-commit run --config .pre-commit-config-maintainer.yaml --all-files
   rules:
     - !reference [.rules, not_default_branch]
     - !reference [.rules, not_schedule]
