source-destination-map: upload guests.yaml in progress

--- a/terragrunt/environments/dev/worker-local/citool-config/source-destination-map.yaml
+++ b/terragrunt/environments/dev/worker-local/citool-config/source-destination-map.yaml
@@ -33,6 +33,8 @@ progress:
 
   - source: "work-*/**/output.txt"
 
+  - source: "work-*/**/guests.yaml"
+
   - source: "results.xml"
     destination: results.xml
 
