--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ terragrunt/environments/**/worker*/citool-config/environment.yaml
 terragrunt/environments/**/server/pods/nginx/*.conf
 terragrunt/environments/**/server/pods/server.yaml
 terragrunt/environments/**/server/pods/tmt-web.yaml
+terragrunt/environments/**/server/pods/nginx.yaml
 terragrunt/environments/**/server/ec2/server.bu
 terragrunt/environments/**/server/ec2/server.ign
 
