--- a/terragrunt/environments/staging/artemis/config/variables_images.yaml
+++ b/terragrunt/environments/staging/artemis/config/variables_images.yaml
@@ -1,29 +1,21 @@
 ---
 composes:
 
-  fedora_38:
-    compose: Fedora-38
-
-    x86_64:
-      image: Fedora-Cloud-Base-38-20240429.0.x86_64-hvm-us-east-2-gp3-0
-    aarch64:
-      image: Fedora-Cloud-Base-38-20240429.0.aarch64-hvm-us-east-2-gp3-0
-
   fedora_39:
     compose: Fedora-39
 
     x86_64:
-      image: Fedora-Cloud-Base-AmazonEC2.x86_64-39-20241024.0
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-39-20241031.0
     aarch64:
-      image: Fedora-Cloud-Base-AmazonEC2.aarch64-39-20241024.0
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-39-20241031.0
 
   fedora_40:
     compose: Fedora-40
 
     x86_64: &fedora_latest_ref_x86_64
-      image: Fedora-Cloud-Base-AmazonEC2.x86_64-40-20241024.0
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-40-20241101.0
     aarch64: &fedora_latest_ref_aarch64
-      image: Fedora-Cloud-Base-AmazonEC2.aarch64-40-20241024.0
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-40-20241101.0
 
   fedora_41:
     compose: Fedora-41
@@ -44,9 +36,9 @@ composes:
     compose: Fedora-Rawhide
 
     x86_64:
-      image: Fedora-Cloud-Base-AmazonEC2.x86_64-Rawhide-20241024.0
+      image: Fedora-Cloud-Base-AmazonEC2.x86_64-Rawhide-20241101.0
     aarch64:
-      image: Fedora-Cloud-Base-AmazonEC2.aarch64-Rawhide-20241024.0
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-Rawhide-20241101.0
 
   centos_7:
     compose: CentOS-7
@@ -60,22 +52,22 @@ composes:
     compose: CentOS-Stream-8
 
     x86_64:
-      image: CentOS Stream 8 x86_64 20240603
+      image: CentOS Stream 8 x86_64
     aarch64:
-      image: CentOS Stream 8 aarch64 20240603
+      image: CentOS Stream 8 aarch64
 
   centos_stream_9:
     compose: CentOS-Stream-9
 
     x86_64:
-      image: CentOS Stream 9 x86_64 20241021
+      image: CentOS Stream 9 x86_64 20241028
     aarch64:
-      image: CentOS Stream 9 aarch64 20241016
+      image: CentOS Stream 9 aarch64 20241028
 
   centos_stream_10:
     compose: CentOS-Stream-10
 
     x86_64:
-      image: CentOS Stream 10 x86_64 20241022
+      image: CentOS Stream 10 x86_64 20241029
     aarch64:
-      image: CentOS Stream 10 aarch64 20241022
+      image: CentOS Stream 10 aarch64 20241029
