worker-redhat: add needed workarounds for dnf5
Now that dnf5 is back, we need to make sure required workarounds are
applied. Should resolve this issue causing a lot of errors lately:

```
Could not import the dnf python module using /usr/bin/python3 (3.13.0 (main, Oct  8 2024, 00:00:00) [GCC 14.2.1 20240912 (Red Hat 14.2.1-3)]). Please install `python3-dnf` or `python2-dnf` package or ensure you have specified the correct ansible_python_interpreter. (attempted ['/usr/libexec/platform-python', '/usr/bin/python3', '/usr/bin/python2', '/usr/bin/python'])
```

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/entrypoint.yaml
@@ -3,6 +3,8 @@
     pkg_retry_count: 5
     pkg_retry_delay: 30
   tasks:
+  # DNF5 needs an early workaround
+  - include_tasks: workaround-dnf5.yaml
   # For accessing internal network resources, certs should be installed early.
   - name: Install RH certificates
     include_tasks: install-certs.yaml
