--- a/terragrunt/environments/production/artemis/config/variables_images.yaml
+++ b/terragrunt/environments/production/artemis/config/variables_images.yaml
@@ -7,7 +7,7 @@ composes:
     x86_64:
       image: Fedora-Cloud-Base-AmazonEC2.x86_64-39-20241118.0
     aarch64:
-      image: Fedora-Cloud-Base-39-20240805.0.aarch64
+      image: Fedora-Cloud-Base-AmazonEC2.aarch64-39-20241118.0
 
   fedora_40:
     compose: Fedora-40
@@ -40,6 +40,14 @@ composes:
     aarch64:
       image: Fedora-Cloud-Base-AmazonEC2.aarch64-Rawhide-20241118.0
 
+  fedora_40_image_mode:
+    compose: Fedora-40-image-mode
+
+    x86_64:
+      image: Fedora-40-image-mode-x86_64
+    aarch64:
+      image: Fedora-40-image-mode-aarch_64
+
   centos_7:
     compose: CentOS-7
 
@@ -63,6 +71,14 @@ composes:
       image: CentOS Stream 9 x86_64 20241112
     aarch64:
       image: CentOS Stream 9 aarch64 20241112
+
+  centos_stream_9_image_mode:
+    compose: CentOS-Stream-9-image-mode
+
+    x86_64:
+      image: CentOS-Stream-9-image-mode-x86_64
+    aarch64:
+      image: CentOS-Stream-9-image-mode-aarch64
 
   centos_stream_10:
     compose: CentOS-Stream-10
