--- a/tests/worker/public/tmt-x86_64-fedora-koji-build-install-false.yaml
+++ b/tests/worker/public/tmt-x86_64-fedora-koji-build-install-false.yaml
@@ -9,8 +9,8 @@ marks:
   - pipeline
 
 variables:
-  REQUEST_ID: db682f00-b749-4395-93d8-2d9b5f535389
-  COMPOSE: Fedora-38
+  REQUEST_ID: cc6892d1-ac5a-44d8-a294-855b553d2653
+  COMPOSE: Fedora-Rawhide
   ARCH: x86_64
   ARCH_32: i686
   RESULT: PASSED
@@ -22,13 +22,13 @@ variables:
 checks:
   literal-patterns:
     - "[{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}] installing the artifact"
-    - "[artemis] [{{ artemis_guestname_pattern }}] Download task id vim-9.0.1677-2.fc38"
-    - "[artemis] [{{ artemis_guestname_pattern }}] Download task id tmt-1.26.0-1.fc38"
+    - "[artemis] [{{ artemis_guestname_pattern }}] Download task id vim-9.1.825-1.fc42"
+    - "[artemis] [{{ artemis_guestname_pattern }}] Download task id tmt-1.38.0-1.fc42"
     - "[artemis] [{{ artemis_guestname_pattern }}] Get package list"
     - "[artemis] [{{ artemis_guestname_pattern }}] Reinstall packages"
     - "[artemis] [{{ artemis_guestname_pattern }}] Install packages"
     - "[artemis] [{{ artemis_guestname_pattern }}] Verify all packages installed"
 
   literal-patterns[citool-debug.txt]:
-    - "koji download-build --debuginfo --task-id --arch noarch --arch {{ ARCH }} --arch {{ ARCH_32 }} --arch src vim-9.0.1677-2.fc38 || koji download-task --arch noarch --arch {{ ARCH }} --arch {{ ARCH_32 }} --arch src vim-9.0.1677-2.fc38"
-    - "koji download-build --debuginfo --task-id --arch noarch --arch {{ ARCH }} --arch {{ ARCH_32 }} --arch src tmt-1.26.0-1.fc38 || koji download-task --arch noarch --arch {{ ARCH }} --arch {{ ARCH_32 }} --arch src tmt-1.26.0-1.fc38"
+    - "koji download-build --debuginfo --task-id --arch noarch --arch {{ ARCH }} --arch {{ ARCH_32 }} --arch src vim-9.1.825-1.fc42 || koji download-task --arch noarch --arch {{ ARCH }} --arch {{ ARCH_32 }} --arch src vim-9.1.825-1.fc42"
+    - "koji download-build --debuginfo --task-id --arch noarch --arch {{ ARCH }} --arch {{ ARCH_32 }} --arch src tmt-1.38.0-1.fc42 || koji download-task --arch noarch --arch {{ ARCH }} --arch {{ ARCH_32 }} --arch src tmt-1.38.0-1.fc42"
