--- a/tests/worker/public/tmt-test-filter-x86_64.yaml
+++ b/tests/worker/public/tmt-test-filter-x86_64.yaml
@@ -9,8 +9,8 @@ marks:
   - pipeline
 
 variables:
-  REQUEST_ID: acdf7a5c-5fa5-4bd9-9e20-18285ab8d3ce
-  COMPOSE: Fedora-38
+  REQUEST_ID: 4f6affe1-904f-420a-8fad-186bc10244dc
+  COMPOSE: Fedora-Rawhide
   ARCH: x86_64
   RESULT: PASSED
   GIT_CLONE_URL: https://gitlab.com/testing-farm/tests
