--- a/terragrunt/environments/staging/worker-public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
+++ b/terragrunt/environments/staging/worker-public/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
@@ -16,7 +16,7 @@
         and ansible_distribution_release == "Stream"
         and ansible_distribution_major_version | int == 10
       )'
-    - '"image-mode" not in IMAGE_NAME|lower'
+    - '"bootc" not in IMAGE_NAME|lower'
   retries: "{{ pkg_retry_count }}"
   delay: "{{ pkg_retry_delay }}"
   until: result_package is succeeded
