--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-automotive.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/workaround-automotive.yaml
@@ -13,15 +13,9 @@
       ignore_errors: true
 
     - name: Install rsync via rpm-ostree
-      shell: "rpm-ostree install http://download.eng.bos.redhat.com/brewroot/vol/rhel-9/packages/rsync/3.2.3/16.el9/$(arch)/rsync-3.2.3-16.el9.$(arch).rpm"
+      shell: "rpm-ostree install --apply-live http://download.eng.bos.redhat.com/brewroot/vol/rhel-9/packages/rsync/3.2.3/16.el9/$(arch)/rsync-3.2.3-16.el9.$(arch).rpm"
       when: rsync_package_check is failed
 
-    - name: Restart
-      reboot:
-
-    - name: Wait for connection for 5 minutes
-      wait_for_connection:
-        delay: 5
-        timeout: 300
-
-  when: '"auto-osbuild" in IMAGE_NAME|lower'
+  when:
+    - '"auto-osbuild" in IMAGE_NAME|lower'
+    - '"ostree" in IMAGE_NAME|lower'
