--- a/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-epel.yaml
+++ b/terragrunt/environments/production/worker-redhat/citool-config/guest-setup/pre-artifact-installation/install-epel.yaml
@@ -25,3 +25,18 @@
   delay: "{{ pkg_retry_delay }}"
   until: result_package is succeeded
   register: result_package
+
+- name: Install EPEL on CentOS Stream 10
+  package:
+    name:
+      - epel-release
+    state: present
+  when:
+    - 'ansible_distribution == "CentOS"'
+    - 'ansible_distribution_release == "Stream"'
+    - 'ansible_distribution_major_version | int == 10'
+    - '"image-mode" not in IMAGE_NAME|lower'
+  retries: "{{ pkg_retry_count }}"
+  delay: "{{ pkg_retry_delay }}"
+  until: result_package is succeeded
+  register: result_package
